// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KanjiCard renders correctly with different kanji 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(247, 243, 249, 1)",
          "borderRadius": 12,
          "marginHorizontal": 16,
          "marginVertical": 8,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3,
        }
      }
      testID="card-container-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "rgba(247, 243, 249, 1)",
            "borderRadius": 12,
            "elevation": 2,
            "flex": undefined,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 1,
          }
        }
        testID="card-container"
      >
        <View
          style={
            [
              {
                "flexShrink": 1,
              },
              undefined,
            ]
          }
          testID="card"
        >
          <View
            borderRadiusStyles={{}}
            style={
              [
                {
                  "paddingHorizontal": 16,
                },
                {
                  "paddingVertical": 16,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                    },
                    {
                      "writingDirection": "ltr",
                    },
                    {
                      "fontSize": 60,
                      "fontWeight": "bold",
                      "marginRight": 20,
                      "minWidth": 80,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                二
              </Text>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "#000000",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "500",
                          "letterSpacing": 0.15,
                          "lineHeight": 24,
                        },
                        {
                          "marginBottom": 4,
                        },
                      ],
                    ]
                  }
                >
                  two
                </Text>
                <Text
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "#000000",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "letterSpacing": 0.4,
                          "lineHeight": 16,
                        },
                        [
                          {},
                          {
                            "color": "rgba(73, 69, 79, 1)",
                          },
                        ],
                      ],
                    ]
                  }
                >
                  ニ
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`KanjiCard renders correctly with kanji data 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(247, 243, 249, 1)",
          "borderRadius": 12,
          "marginHorizontal": 16,
          "marginVertical": 8,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3,
        }
      }
      testID="card-container-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "rgba(247, 243, 249, 1)",
            "borderRadius": 12,
            "elevation": 2,
            "flex": undefined,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 1,
          }
        }
        testID="card-container"
      >
        <View
          style={
            [
              {
                "flexShrink": 1,
              },
              undefined,
            ]
          }
          testID="card"
        >
          <View
            borderRadiusStyles={{}}
            style={
              [
                {
                  "paddingHorizontal": 16,
                },
                {
                  "paddingVertical": 16,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                    },
                    {
                      "writingDirection": "ltr",
                    },
                    {
                      "fontSize": 60,
                      "fontWeight": "bold",
                      "marginRight": 20,
                      "minWidth": 80,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                一
              </Text>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "#000000",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "500",
                          "letterSpacing": 0.15,
                          "lineHeight": 24,
                        },
                        {
                          "marginBottom": 4,
                        },
                      ],
                    ]
                  }
                >
                  one, single
                </Text>
                <Text
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "#000000",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "letterSpacing": 0.4,
                          "lineHeight": 16,
                        },
                        [
                          {},
                          {
                            "color": "rgba(73, 69, 79, 1)",
                          },
                        ],
                      ],
                    ]
                  }
                >
                  イチ, イツ
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`KanjiCard renders correctly with onPress handler 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(247, 243, 249, 1)",
          "borderRadius": 12,
          "marginHorizontal": 16,
          "marginVertical": 8,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3,
        }
      }
      testID="card-container-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "rgba(247, 243, 249, 1)",
            "borderRadius": 12,
            "elevation": 2,
            "flex": undefined,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 1,
          }
        }
        testID="card-container"
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              [
                {
                  "flexShrink": 1,
                },
                undefined,
              ]
            }
            testID="card"
          >
            <View
              borderRadiusStyles={{}}
              style={
                [
                  {
                    "paddingHorizontal": 16,
                  },
                  {
                    "paddingVertical": 16,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      {
                        "fontSize": 60,
                        "fontWeight": "bold",
                        "marginRight": 20,
                        "minWidth": 80,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  一
                </Text>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "#000000",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 16,
                            "fontWeight": "500",
                            "letterSpacing": 0.15,
                            "lineHeight": 24,
                          },
                          {
                            "marginBottom": 4,
                          },
                        ],
                      ]
                    }
                  >
                    one, single
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "#000000",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 12,
                            "fontWeight": "400",
                            "letterSpacing": 0.4,
                            "lineHeight": 16,
                          },
                          [
                            {},
                            {
                              "color": "rgba(73, 69, 79, 1)",
                            },
                          ],
                        ],
                      ]
                    }
                  >
                    イチ, イツ
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
